--- a/Tailwind-css-assignments/Task-3/index.html
+++ b/Tailwind-css-assignments/Task-3/index.html
@@ -1,13 +1,70 @@
 <!doctype html>
 <html>
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./main.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
+    integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-<body>
-  <h1 class="text-3xl font-bold underline">
-    Hello world!
-  </h1>
+
+<body class="flex w-full h-screen">
+  <section class="flex w-44 flex-col bg-slate-800 h-full text-gray-300 justify-between">
+    <section>
+      <h1 class="text-white text-center font-semibold p-4">Dashboard</h1>
+      <div class="flex flex-col ">
+        <div class="flex items-center py-2 hover:text-white hover:bg-slate-700 cursor-pointer">
+          <i class="fa-solid fa-chart-pie px-3"></i>
+          <p>Dashboard</p>
+        </div>
+        <div class="flex items-center py-2 hover:text-white hover:bg-slate-700 cursor-pointer">
+          <i class="fa-solid fa-users px-3"></i>
+          <p>Team</p>
+        </div>
+        <div class="flex items-center py-2 hover:text-white hover:bg-slate-700 cursor-pointer">
+          <i class="fa-solid fa-calendar-days px-3"></i>
+          <p>Calendar</p>
+        </div>
+        <div class="flex items-center py-2 hover:text-white hover:bg-slate-700 cursor-pointer">
+          <i class="fa-solid fa-file-invoice px-3"></i>
+          <p>Documents</p>
+        </div>
+        <div class="flex items-center py-2 hover:text-white hover:bg-slate-700 cursor-pointer">
+          <i class="fa-solid fa-clipboard-check px-3"></i>
+          <p>Reports</p>
+        </div>
+      </div>
+    </section>
+    <section class="flex flex-col">
+      <h3 class="px-3">Your Teams</h3>
+      <div class="flex items-center py-2 hover:text-white hover:bg-slate-700 cursor-pointer">
+        <i class="fa-solid fa-users px-3"></i>
+        <p>PW Skills</p>
+      </div>
+      <div class="flex items-center py-2 hover:text-white hover:bg-slate-700 cursor-pointer">
+        <i class="fa-solid fa-users px-3"></i>
+        <p>PW Labs</p>
+      </div>
+      <div class="flex items-center py-2 hover:text-white hover:bg-slate-700 cursor-pointer">
+        <i class="fa-solid fa-users px-3"></i>
+        <p>PW-IOI</p>
+      </div>
+    </section>
+  </section>
+  <section class="flex w-full bg-gray-200 ">
+    <section class="flex h-12 w-full items-center justify-between bg-white m-4 px-4 shadow-md rounded-md ">
+      <div class="flex items-center gap-2 cursor-pointer">
+        <i class="fa-solid fa-circle-user"></i>
+        <p>Profile</p>
+      </div>
+      <div class="flex items-center gap-2 cursor-pointer">
+        <i class="fa-solid fa-magnifying-glass"></i>
+        <i class="fa-solid fa-bell"></i>
+      </div>
+    </section>
+  </section>
 </body>
+
 </html>
