--- a/Building resume tamplate using HTML and CSS/index.html
+++ b/Building resume tamplate using HTML and CSS/index.html
@@ -16,12 +16,34 @@
 <body>
     <main>
         <div class="left-part">
-            <div class="avatar">
-                <img src="./000.png" alt="avatar">
+            <div class="personal-details">
+                <div class="avatar">
+                    <img src="./000.png" alt="avatar">
+                </div>
+                <div class="name">
+                    <h3>SUBHADIP KUNDU</h3>
+                    <h4>TITLE</h4>
+                </div>
+                <div class="social">
+                    <div class="github">
+                        <i class="fa-brands fa-github"></i>
+                        <a href="https://github.com/subhadip-kundu/">subhadip-kundu</a>
+                    </div>
+                    <div class="linkedin">
+                        <i class="fa-brands fa-linkedin"></i>
+                        <a href="https://www.linkedin.com/in/subhadip-kundu-/">subhadip-kundu-</a>
+                    </div>
+                </div>
+            </div>
+            <div class="contact">
+                <h2>Contact</h2>
+                <hr width="80%">
+                <p>Phone</p>
+                +91 9134244136
             </div>
         </div>
         <div class="right-part">
-            
+
         </div>
     </main>
 </body>
